--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.12.0",
     "firebase": "^11.6.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
