--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "jspdf": "^3.0.1",
     "next": "15.3.1",
     "openai": "^4.97.0",
-    "react": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^19.0.0",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
