--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "next": "15.3.1",
     "openai": "^4.97.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
