--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
